--- a/MiddlewareLayerFramework/MiddlewareLayerFramework.csproj
+++ b/MiddlewareLayerFramework/MiddlewareLayerFramework.csproj
@@ -47,11 +47,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DraliaRestClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\DraliaRestRepo.cs" />
+    <Compile Include="Repository\IRestRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Entities\" />
-    <Folder Include="Repository\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
