--- a/DraliaTest/DraliaTest.csproj
+++ b/DraliaTest/DraliaTest.csproj
@@ -58,6 +58,7 @@
       <HintPath>..\packages\SpecFlow.Assist.Dynamic.1.3.1\lib\45\SpecFlow.Assist.Dynamic.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="TechTalk.SpecFlow, Version=2.2.0.0, Culture=neutral, PublicKeyToken=0778194805d6db41, processorArchitecture=MSIL">
       <HintPath>..\packages\SpecFlow.2.2.1\lib\net45\TechTalk.SpecFlow.dll</HintPath>
@@ -74,6 +75,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>TakeSlot.feature</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\MiddlewareHelper.cs" />
+    <Compile Include="Helpers\SerializationHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Steps\GetWeeklyAvailability.cs" />
     <Compile Include="Steps\TakeSlot.cs" />
@@ -93,8 +96,12 @@
   <ItemGroup>
     <Content Include="README.txt" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Helpers\" />
+    <ProjectReference Include="..\MiddlewareLayerFramework\MiddlewareLayerFramework.csproj">
+      <Project>{375612fe-6b1b-4fdc-9b3b-624246151c69}</Project>
+      <Name>MiddlewareLayerFramework</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
